# smmregrid

./: .gitignore  .readthedocs.yaml  .zenodo.json  CHANGELOG.md  README.md  cdo-test.sh  dask_playground.ipynb  demo.ipynb  demo_3d.ipynb  environment.yml  playground.ipynb  pyproject.toml  remap_notebook.ipynb  setup.py  skipna.ipynb  speed-evaluation.ipynb
.github/workflow/: mambatest.yml
.github/workflows/: .mambatest.yml.swp  mambatest.yml  pypitest.yml  python-publish.yml
docs/sphinx/source/: api.rst  cdogenerate.rst  conf.py  index.rst  installation.rst  intro.rst  regridder.rst  usage.rst
smmregrid/: __init__.py  cdo_weights.py  cdogenerate.py  cdogrid.py  checker.py  default.py  dimension.py  esmf_weights.py  grid_inspector.py  griddetector.py  gridinspector.py  gridtype.py  log.py  regrid.py  util.py  weights.py
tests/: areas_test.py  areas_tests.py  basic_test.py  cdogrid_test.py  gridinspector_test.py  gridtype_test.py  identity2d_test.py  identity3d_test.py  identity_test.py  levels_test.py  multigrid_test.py  nanvariation_test.py  remapareamin_test.py  test_nan_variation.py  util_test.py
tests/data/: 2t-era5.nc  berkley.nc  healpix_0.nc  regional.nc  tas-ecearth.nc  tas-healpix.nc  tas-healpix2.nc  temp3d-fesom.nc  tos-ipsl.nc  ua-ipsl.nc
