[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smmregrid"
dynamic = ["version"]
authors = [
  { name="Jost von Hardenberg", email="jost.hardenberg@polito.it" },
  { name="Paolo Davini", email="p.davini@isac.cnr.it" },
  { name="Scott Wales", email="scott.wales@unimelb.edu.au"}
]
description = "Regridding based on sparse matrix multiplication"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    'numpy',
    'xarray',
    'dask',
    'netcdf4',
    'cfgrib',
    'dask',
    'sparse',
    'cdo',
    'numba',
    'cfunits'
]

[project.optional-dependencies]
tests = [
    "coverage",
    "coveralls",
    "pytest"
]

notebooks = [
    "ipykernel",
    "matplotlib",
    "jinja2"
]

#docs = [
#    "sphinx",
#    "sphinx-rtd-theme"
#]

all = [
    "smmregrid[tests,notebooks]"
]

[project.urls]
"Homepage" = "https://github.com/jhardenberg/smmregrid"
"Bug Tracker" = "https://github.com/jhardenberg/smmregrid/issues"
"Repository" = "https://github.com/jhardenberg/smmregrid"

[tool.setuptools.dynamic]
version = {attr = "smmregrid.__version__"}
